config_nak/network-policy/allow-metrics-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: ip-rule-operator
    app.kubernetes.io/managed-by: kustomize
  name: allow-controller-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: ip-rule-operator
  policyTypes:
    - Ingress
  ingress: []
